# data_structures

./: .gitignore  meson.build
include/: array2d.hpp  matrix.hpp  meson.build  trie.hpp
include/data_structures/: tree.hpp
src/: meson.build
test/: matrix.cpp  meson.build  tree.cpp  trie.cpp
